Fix Comment in string.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Android Engineer CodeCheck</string>
     <string name="searchInputText_hint">GitHub のリポジトリを検索できるよー</string>
     <string name="written_language">Written in %s</string>
-    <!--レポジトリーのデータ-->
+    <!--リポジトリのデータ-->
     <string name="repository_name">JetBrains/kotlin</string>
     <string name="stars_count">38530 stars</string>
     <string name="watchers_count">38530 watchers</string>
