Fix forgotten tag content in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="stars_count">38530 stars</string>
     <string name="watchers_count">38530 watchers</string>
     <string name="forks_count">4675 forks</string>
-    <string name="open_issues_count"></string>
+    <string name="open_issues_count">131 open issues</string>
 </resources>
